[gd_scene load_steps=12 format=2]

[ext_resource path="res://Script/ui/MainMenu.gd" type="Script" id=1]
[ext_resource path="res://Assets/fonts/Extrude.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Assets/sfx/Ui-Select.wav" type="AudioStream" id=3]
[ext_resource path="res://Assets/sfx/Ui-Navigate.wav" type="AudioStream" id=4]
[ext_resource path="res://Assets/sfx/Ui-Back.wav" type="AudioStream" id=5]

[sub_resource type="DynamicFont" id=1]
size = 69
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxEmpty" id=11]

[sub_resource type="DynamicFont" id=2]
size = 32
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxEmpty" id=8]

[sub_resource type="StyleBoxEmpty" id=9]

[sub_resource type="StyleBoxEmpty" id=10]

[node name="MainMenu" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 1024.0
margin_bottom = 600.0
color = Color( 0.286275, 0.0980392, 0.0980392, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="."]
margin_right = 1024.0
margin_bottom = 600.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 360.0
margin_top = 173.0
margin_right = 663.0
margin_bottom = 427.0
custom_constants/separation = 20

[node name="CenterContainer" type="CenterContainer" parent="CenterContainer/VBoxContainer"]
margin_right = 303.0
margin_bottom = 70.0

[node name="Title" type="Label" parent="CenterContainer/VBoxContainer/CenterContainer"]
margin_right = 303.0
margin_bottom = 70.0
custom_fonts/font = SubResource( 1 )
text = "Beaners!"

[node name="CenterContainer2" type="CenterContainer" parent="CenterContainer/VBoxContainer"]
margin_top = 90.0
margin_right = 303.0
margin_bottom = 254.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/VBoxContainer/CenterContainer2"]
margin_left = 81.0
margin_right = 221.0
margin_bottom = 164.0

[node name="CenterContainer3" type="CenterContainer" parent="CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer"]
margin_right = 140.0
margin_bottom = 38.0

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer/CenterContainer3"]
margin_left = 28.0
margin_right = 112.0
margin_bottom = 38.0

[node name="Play" type="Button" parent="CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer/CenterContainer3/HBoxContainer"]
margin_right = 84.0
margin_bottom = 38.0
custom_styles/focus = SubResource( 11 )
custom_fonts/font = SubResource( 2 )
text = "PLAY"
flat = true

[node name="CenterContainer2" type="CenterContainer" parent="CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer"]
margin_top = 42.0
margin_right = 140.0
margin_bottom = 80.0

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer/CenterContainer2"]
margin_right = 140.0
margin_bottom = 38.0

[node name="Options" type="Button" parent="CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer/CenterContainer2/HBoxContainer"]
margin_right = 140.0
margin_bottom = 38.0
custom_styles/focus = SubResource( 8 )
custom_fonts/font = SubResource( 2 )
text = "OPTIONS"
flat = true

[node name="CenterContainer4" type="CenterContainer" parent="CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer"]
margin_top = 84.0
margin_right = 140.0
margin_bottom = 122.0

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer/CenterContainer4"]
margin_left = 27.0
margin_right = 113.0
margin_bottom = 38.0

[node name="Help" type="Button" parent="CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer/CenterContainer4/HBoxContainer"]
margin_right = 86.0
margin_bottom = 38.0
custom_styles/focus = SubResource( 9 )
custom_fonts/font = SubResource( 2 )
text = "HELP"
flat = true

[node name="CenterContainer" type="CenterContainer" parent="CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer"]
margin_top = 126.0
margin_right = 140.0
margin_bottom = 164.0

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer/CenterContainer"]
margin_left = 29.0
margin_right = 111.0
margin_bottom = 38.0

[node name="Quit" type="Button" parent="CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer/CenterContainer/HBoxContainer"]
margin_right = 82.0
margin_bottom = 38.0
custom_styles/focus = SubResource( 10 )
custom_fonts/font = SubResource( 2 )
text = "QUIT"
flat = true

[node name="NavigateSfx" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[node name="SelectSfx" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[node name="BackSfx" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[connection signal="gui_input" from="CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer/CenterContainer3/HBoxContainer/Play" to="." method="_on_Play_gui_input"]
[connection signal="gui_input" from="CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer/CenterContainer2/HBoxContainer/Options" to="." method="_on_Options_gui_input"]
[connection signal="gui_input" from="CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer/CenterContainer4/HBoxContainer/Help" to="." method="_on_Help_gui_input"]
[connection signal="gui_input" from="CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer/CenterContainer/HBoxContainer/Quit" to="." method="_on_Quit_gui_input"]
